refactor: modernize codebase and resolve compilation warnings
- Replace deprecated HDF5/NetCDF metadata access with modern APIs
- Update Swing UI components to remove deprecations and genericize raw types
- Migrate URL and class-loader usage to java.net.URI
- Adjust Maven build configuration for warning-free compilation